make text fade out fixing the overlap issue on the cards

--- a/style/articles.scss
+++ b/style/articles.scss
@@ -108,6 +108,7 @@ h1{
 						margin-right: 0;
 						height: 70px;
 						margin: 0;
+						mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
 					}
 					.button{
 						display: block;
