--- a/style/index.scss
+++ b/style/index.scss
@@ -202,6 +202,7 @@ a{
 						margin-right: 0;
 						height: 70px;
 						margin: 0;
+						mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
 					}
 					.button{
 						display: block;
